--- a/main.html
+++ b/main.html
@@ -4,9 +4,11 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+		<h1>Why I want to become a developer?</h1>
 </head>
 
 <body>
+	<p>You might want to become a developer because it allows you to create cool things with computers, solve problems, and have a job with good pay and lots of opportunities.</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
